<?xml version="1.0"?>
<package format="2">
  <name>moveit_kinematics</name>
  <version>1.0.1</version>
  <description>Package for all inverse kinematics solvers in MoveIt!</description>

  <author email="dave@picknik.ai">Dave Coleman</author>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>

  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend>orocos_kdl</depend>
  <depend>moveit_msgs</depend>

  <exec_depend>python-lxml</exec_depend>

  <test_depend>moveit_resources</test_depend>

  <export>
    <moveit_core plugin="${prefix}/kdl_kinematics_plugin_description.xml"/>
  </export>

</package>
