<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_planners_ompl</name>
  <version>1.0.1</version>
  <description>MoveIt! interface to OMPL</description>

  <author email="isucan@google.com">Ioan Sucan</author>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>ompl</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend version_gte="1.11.2">pluginlib</depend>

  <test_depend>moveit_resources</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <moveit_core plugin="${prefix}/ompl_interface_plugin_description.xml"/> -->
  </export>

</package>
