<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_ros_planning</name>
  <version>1.0.0</version>
  <description>Planning components of MoveIt! that use ROS</description>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend version_gte="1.11.2">pluginlib</build_depend>
  <!-- <build_depend>actionlib</build_depend> -->
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend version_gte="1.11.2">pluginlib</exec_depend>
  <!-- <exec_depend>actionlib</exec_depend> -->
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>srdfdom</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/planning_request_adapters_plugin_description.xml"/>
  </export>

</package>
