<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_ros_planning_interface</name>
  <version>1.0.1</version>
  <description>Components of MoveIt! that offer simpler interfaces to planning and execution</description>

  <author email="isucan@google.com">Ioan Sucan</author>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning</depend>
  <!-- <depend>moveit_ros_warehouse</depend> TODO: uncomment when ported-->
  <depend>moveit_ros_move_group</depend>
  <!-- <depend>moveit_ros_manipulation</depend> TODO: uncomment when ported -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>moveit_resources</test_depend>

  <!-- TODO: Re-add when rostest is ported to ros2 -->
  <!-- <test_depend>rostest</test_depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
